tweaks to the video display * made video a separate page * fixed layout in index.html to cope with the additional button * return to main menu after playback finished * made buttons with some more contrast

--- a/info_terminal/info_terminal_gui/www/static/custom.css
+++ b/info_terminal/info_terminal_gui/www/static/custom.css
@@ -4,8 +4,9 @@
 }
 
 ::cue {
-	font-size: 14px;
+	font-size: 30px;
 	color: white;
-	background-color: #88444444;
+	line-height: 150%;
+	background-color: #99444444;
 }
 
